# wolfram-alpha-rs

./: Cargo.toml  search-index.js
hyper/: struct.Url.html
serde_xml/: index.html
serde_xml/de/: enum.LexerError.html  fn.from_iter.html  fn.from_str.html  index.html  struct.Deserializer.html  struct.InnerDeserializer.html  struct.KeyDeserializer.html
serde_xml/error/: enum.Error.html  enum.ErrorCode.html  index.html
serde_xml/value/: enum.Content.html  fn.from_value.html  index.html  struct.Element.html
src/: error.rs  lib.rs  model.rs  query.rs
src/serde_xml/: error.rs.html  lib.rs.html  value.rs.html
src/wolfram_alpha/: error.rs.html  lib.rs.html  model.rs.html  query.rs.html
tests/sample-data/: img.xml
url/: enum.Host.html  struct.Url.html
wolfram_alpha/: HttpRequestResult.t.html  enum.Error.html  enum.HttpRequestError.html  index.html  sidebar-items.js  trait.WolframAlphaRequestSender.html  type.HttpRequestResult.html  type.Result.html
wolfram_alpha/error/: type.HttpRequestResult.html
wolfram_alpha/model/: index.html  struct.Assumption.html  struct.Assumptions.html  struct.Definition.html  struct.Definitions.html  struct.Delimeters.html  struct.DidYouMean.html  struct.DidYouMeans.html  struct.Error.html  struct.ExamplePage.html  struct.FutureTopic.html  struct.Generalization.html  struct.ImageMap.html  struct.Img.html  struct.Info.html  struct.Infos.html  struct.LanguageMsg.html  struct.Link.html  struct.Notes.html  struct.Pod.html  struct.QueryResult.html  struct.Rect.html  struct.Reinterpret.html  struct.RelatedExample.html  struct.RelatedExamples.html  struct.Sound.html  struct.Sounds.html  struct.Source.html  struct.Sources.html  struct.Spellcheck.html  (+14 more)
(+37 files in other folders)
