[package]
name = "wolfram_alpha"
version = "0.4.0"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A library providing Rust bindings for the Wolfram|Alpha API"
repository = "https://github.com/indiv0/wolfram-alpha-rs"
documentation = "https://indiv0.github.io/wolfram-alpha-rs/wolfram_alpha/"
readme = "README.md"
keywords = [
    "wolfram",
    "alpha",
    "API",
    "web",
    "library",
]
license = "MIT/Apache-2.0"
include = [
    "build.rs",
    "CHANGELOG.md",
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/**/*.rs",
]

[dependencies]
error-chain = "0.10"
log = "0.3"
reqwest = "0.6"
serde = "1.0"
serde_derive = "1.0"
url = "1.5"
url_serde = "0.2"

[dependencies.serde-xml-rs]
git = "https://github.com/ParadoxSpiral/serde-xml-rs.git"